package com.example.prototype_sybren.repository;

import org.springframework.stereotype.Repository;

@Repository
public class BoekingRepository {
}
