package com.example.prototype_sybren.service;

import com.example.prototype_sybren.domain.Boeking;

import java.util.List;

public interface BoekingInterface {

    String haalInterneBoekingenOp();
    String haalExterneBoekingenOp();
}
